<resources>
    <string name="app_name">KeepIt!</string>
    <string name="fab_string">추가하기</string>
    <string name="search">검색</string>
    <string name="filter">필터</string>
    <string name="add_item">Add Item</string>
    <string name="delete">삭제</string>
    <string name="if_list_empty">아직 목록이 없습니다!</string>
    <string name="main_title">KeepIt!</string>
    <string name="add_title">추가하기</string>
    <string name="itemNameHint">이름을 입력해주세요 (필수)</string>
    <string name="itemLinkHint">링크를 입력해주세요</string>
    <string name="itemPriceHint">가격을 입력해주세요 (단위 : 원, 필수)</string>
    <string name="itemNameError">이름은 필수 입력 항목입니다</string>
    <string name="itemPriceError">가격은 필수 입력 항목입니다</string>
    <string name="completeDialog">작성을 완료하시겠습니까?</string>
    <string name="itemMemoHint">간단한 메모를 남겨주세요</string>
    <string name="completeButton">등록하기</string>
    <string name="filter_latest">최신순</string>
    <string name="filter_priority">중요도순</string>
    <string name="filter_price">가격순</string>
    <string name="edit">수정</string>
    <string name="detailTitle">자세히 보기</string>
    <string name="setting_title">설정</string>
    <string name="channel_name">KEEP_IT</string>
    <string name="channel_description">KEEP_IT_PUSH</string>
    <string name="cancelButton">취소하기</string>

    <string name="info_header">앱 정보</string>
    <string name="feedback_header">피드백</string>

    <string name="app_info">KeepIt!</string>
    <string name="app_vesion">asdf</string>

    <string name="email_title">이메일 보내기</string>
</resources>