<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/info_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="name"
            app:title="@string/app_info"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:summary="@string/versionName"
            app:title="버전"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:title="@string/feedback_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="email"
            app:summary="개발자에게 이메일을 전송합니다"
            app:title="@string/email_title">
        </Preference>


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>