<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:contentDescription="@string/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:contentDescription="@string/delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete"
        app:showAsAction="always"/>
</menu>