<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="24dp"
        tools:context=".ui.AddActivity">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="?attr/selectableItemBackground"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/add_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/itemImageCard"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title_layout">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/placeholder"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeErrorColor="@color/error_stroke"
            app:layout_constraintTop_toBottomOf="@+id/itemImageCard">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "@string/itemNameHint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemPriceLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeErrorColor="@color/error_stroke"
            app:layout_constraintTop_toBottomOf="@+id/itemNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/itemPriceHint"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemLinkLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeErrorColor="@color/error_stroke"
            app:layout_constraintTop_toBottomOf="@+id/itemPriceLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/itemLinkHint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RatingBar
            android:id="@+id/itemRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/rating_color"
            android:rating="3"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemLinkLayout" />

        <EditText
            android:id="@+id/itemMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="#E8E8E8"
            android:ems="10"
            android:hint="@string/itemMemoHint"
            android:minHeight="60dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#5C5C5C"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemRatingBar" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:id="@+id/completeButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemMemo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/box_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completeButton"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>