<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.xw.repo.widget.BounceScrollView
            android:layout_above="@+id/completeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="24dp"
                tools:context=".ui.AddItemActivity">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itemMemoLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanum_regular"
                    app:boxStrokeColor="@color/box_stroke"
                    app:boxStrokeErrorColor="@color/error_stroke"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/itemLinkLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextItemMemo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemMemoHint"
                        android:inputType="text"
                        android:text="@={viewModel.itemMemo}" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/add_title"
                        android:textColor="@color/black"
                        android:textFontWeight="900"
                        android:textSize="24sp" />

                </LinearLayout>


                <TextView
                    android:layout_marginTop="32dp"
                    android:id="@+id/ratingItemPriorityTitleText"
                    app:layout_constraintTop_toBottomOf="@id/itemMemoLayout"
                    android:text="우선순위를 매긴다면?"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RatingBar
                    android:layout_marginBottom="16dp"
                    android:id="@+id/ratingItemPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:layout_marginTop="8dp"
                    android:numStars="5"
                    android:progressTint="@color/view_volor"
                    android:rating="@={viewModel.itemPriority}"
                    android:stepSize="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratingItemPriorityTitleText" />

                <FrameLayout
                    app:layout_constraintTop_toBottomOf="@+id/title_layout"
                    android:id="@+id/itemImageCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/addImageButton"
                        android:layout_marginTop="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/dash_border"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_add_circle_outline_24"
                            app:tint="@color/gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="1dp"
                            android:fontFamily="@font/nanum_regular"
                            android:gravity="center_vertical"
                            android:text="이미지 추가"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:visibility="gone"
                        android:id="@+id/imageViewItemImageLayout"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="16dp"
                        android:elevation="0dp"
                        app:cardCornerRadius="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/title_layout">

                        <ImageView
                            android:id="@+id/imageViewItemImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/placeholder"
                            android:scaleType="centerCrop" />

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itemNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:boxStrokeColor="@color/box_stroke"
                    app:boxStrokeErrorColor="@color/error_stroke"
                    app:layout_constraintTop_toBottomOf="@+id/itemImageCard">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_regular"
                        android:hint="@string/itemNameHint"
                        android:inputType="text"
                        android:text="@={viewModel.itemName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itemPriceLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanum_regular"
                    app:boxStrokeColor="@color/box_stroke"
                    app:boxStrokeErrorColor="@color/error_stroke"
                    app:layout_constraintTop_toBottomOf="@+id/itemNameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextItemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemPriceHint"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.itemPrice}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itemLinkLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxStrokeColor="@color/box_stroke"
                    app:boxStrokeErrorColor="@color/error_stroke"
                    app:layout_constraintTop_toBottomOf="@+id/itemPriceLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextItemLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_regular"
                        android:hint="@string/itemLinkHint"
                        android:inputType="text"
                        android:text="@={viewModel.itemLink}" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.xw.repo.widget.BounceScrollView>

        <View
            android:layout_above="@+id/completeButton"
            android:background="#F4F4F4"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <Button
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/completeButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_button"
            android:elevation="0dp"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/completeButton"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="18sp"/>

    </RelativeLayout>
    <data>

        <variable
            name="viewModel"
            type="com.haero_kim.keepit.ui.ItemViewModel" />
    </data>

</layout>